# my-music-bazel

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  install.sh  maven_install.json
.github/workflows/: build.yaml
app/: BUILD.bazel
app/src/main/: AndroidManifest.xml  BUILD.bazel  LibraryManifest.xml
app/src/main/java/com/amary/my/music/: MainActivity.kt  MainApplication.kt  MainNavigation.kt
app/src/main/java/com/amary/my/music/core/coroutine/: CoroutineModule.kt  CoroutineQualifier.kt
app/src/main/java/com/amary/my/music/core/exoplayer/: ExoPlayerModule.kt
app/src/main/java/com/amary/my/music/core/network/: NetworkModule.kt
app/src/main/java/com/amary/my/music/coroutine/: CoroutineModule.kt  CoroutineQualifier.kt
app/src/main/java/com/amary/my/music/data/api/model/: Music.kt  Result.kt
app/src/main/java/com/amary/my/music/data/api/repository/: MusicRepository.kt
app/src/main/java/com/amary/my/music/data/di/: MusicDataModule.kt
app/src/main/java/com/amary/my/music/data/exoplayer/: MusicPlayer.kt  MusicPlayerImpl.kt  PlayerListener.kt
app/src/main/java/com/amary/my/music/data/implementation/remote/api/: MusicApi.kt
app/src/main/java/com/amary/my/music/data/implementation/remote/response/: MusicResponse.kt  ResultResponse.kt
app/src/main/java/com/amary/my/music/data/implementation/repository/: MusicRepositoryImpl.kt
app/src/main/java/com/amary/my/music/data/local/dao/: MusicDao.kt
app/src/main/java/com/amary/my/music/data/local/entity/: ResultEntity.kt
app/src/main/java/com/amary/my/music/data/remote/api/: MusicApi.kt
app/src/main/java/com/amary/my/music/data/remote/response/: MusicResponse.kt  ResultResponse.kt
app/src/main/java/com/amary/my/music/data/repository/: MusicRepositoryImpl.kt
app/src/main/java/com/amary/my/music/di/: DataModule.kt  DatabaseModule.kt  DomainModule.kt  ExoPlayerModule.kt  NetworkModule.kt  ViewModelModule.kt
app/src/main/java/com/amary/my/music/domain/api/: MusicUseCase.kt
app/src/main/java/com/amary/my/music/domain/di/: MusicDomainModule.kt
app/src/main/java/com/amary/my/music/domain/implementation/: MusicUseCaseImpl.kt
app/src/main/java/com/amary/my/music/domain/model/: Music.kt  Result.kt
app/src/main/java/com/amary/my/music/domain/repository/: MusicRepository.kt
app/src/main/java/com/amary/my/music/domain/usecase/: CurrentMusicUseCase.kt  ListMusicUseCase.kt  MusicUseCase.kt
app/src/main/java/com/amary/my/music/feature/: MusicBottomSheet.kt  MusicEvent.kt  MusicFeature.kt  MusicFeatureModule.kt  MusicScreen.kt  MusicState.kt  MusicViewModel.kt
app/src/main/java/com/amary/my/music/feature/detail/: DetailBottomSheet.kt  DetailEvent.kt  DetailNav.kt  DetailScreen.kt  DetailState.kt  DetailViewModel.kt
app/src/main/java/com/amary/my/music/feature/list/: ListEvent.kt  ListNav.kt  ListScreen.kt  ListState.kt  ListViewModel.kt
app/src/main/java/com/amary/my/music/ui/icon/: Back.kt  Icons.kt  Next.kt  Pause.kt  Play.kt  Prev.kt  Search.kt
app/src/main/java/com/amary/my/music/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/amary/my/music/ui/util/: DateFormatExt.kt
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/amary/my/music/: ExampleUnitTest.kt  MainTest.kt
app/src/test/java/com/amary/my/music/data/repository/: MusicRepositoryImplTest.kt
app/src/test/java/com/amary/my/music/domain/usecase/: CurrentMusicUseCaseTest.kt  ListMusicUseCaseTest.kt
