load("@rules_kotlin//kotlin:core.bzl", "kt_compiler_plugin", "kt_ksp_plugin")
load("@rules_jvm_external//:defs.bzl", "artifact")

kt_compiler_plugin(
    name = "jetpack_compose_compiler_plugin",
    id = "androidx.compose.compiler",
    target_embedded_compiler = True,
    visibility = ["//visibility:public"],
    deps = [
        artifact("androidx.compose.compiler:compiler")
    ],
)

kt_compiler_plugin(
    name = "serialization_plugin",
    id = "org.jetbrains.kotlin.serialization",
    target_embedded_compiler = True,
    visibility = ["//visibility:public"],
    deps = [
        artifact("org.jetbrains.kotlin:kotlin-serialization-compiler-plugin-embeddable"),
    ],
)

kt_ksp_plugin(
    name = "room_ksp_plugin",
    processor_class = "androidx.room.RoomProcessor",
    generates_java = True,
    target_embedded_compiler = True,
    visibility = ["//visibility:public"],
    deps = [
        artifact("androidx.room:room-compiler"),
        artifact("androidx.room:room-runtime"),
        artifact("androidx.room:room-ktx"),
        artifact("androidx.sqlite:sqlite-framework"),
        artifact("androidx.sqlite:sqlite"),
    ],
)

platform(
    name = "arm64-v8a",
    constraint_values = [
        "@platforms//cpu:arm64",
        "@platforms//os:android",
    ],
)
