###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_kotlin", version = "1.9.6")
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "rules_android", version = "0.1.1")

rules_kotlin_extensions = use_extension("@rules_kotlin//src/main/starlark/core/repositories:bzlmod_setup.bzl", "rules_kotlin_extensions")
rules_kotlin_extensions.ksp_version(
    version = "1.9.23-1.0.20",
    sha256 = "ee0618755913ef7fd6511288a232e8fad24838b9af6ea73972a76e81053c8c2d",
)
use_repo(
    rules_kotlin_extensions,
    "com_github_google_ksp",
    "com_github_jetbrains_kotlin",
    "com_github_jetbrains_kotlin_git",
    "com_github_pinterest_ktlint",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.artifact(
    artifact = "collection",
    group = "androidx.collection",
    version = "1.4.2",
)
maven.artifact(
    artifact = "collection-jvm",
    group = "androidx.collection",
    version = "1.4.2",
)
maven.artifact(
    artifact = "emoji2",
    group = "androidx.emoji2",
    version = "1.3.0",
)
maven.artifact(
    artifact = "lifecycle-common",
    group = "androidx.lifecycle",
    version = "2.8.7",
)
maven.artifact(
    artifact = "lifecycle-runtime",
    group = "androidx.lifecycle",
    version = "2.8.7",
)
maven.artifact(
    artifact = "lifecycle-viewmodel",
    group = "androidx.lifecycle",
    version = "2.8.7",
)
maven.artifact(
    artifact = "activity-ktx",
    group = "androidx.activity",
    version = "1.9.3",
)
maven.install(
    boms = [
        "androidx.compose:compose-bom:2024.12.01",
    ],
    artifacts = [
        "org.jetbrains.kotlin:kotlin-serialization-compiler-plugin-embeddable:1.9.23",
        "org.jetbrains.kotlinx:kotlinx-serialization-core:1.6.3",
        "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3",

        "androidx.compose.material:material",
        "androidx.compose.material3:material3",
        "androidx.compose.material:material-icons-core",
        "androidx.compose.ui:ui",
        "androidx.compose.ui:ui-tooling",
        "androidx.compose.ui:ui-tooling-preview",
        "androidx.compose.runtime:runtime",
        "androidx.compose.animation:animation-core",
        "androidx.navigation:navigation-compose:2.8.9",

        "androidx.appcompat:appcompat:1.5.1",
        "androidx.activity:activity-compose:1.9.3",
        "androidx.compose.compiler:compiler:1.5.11",

        "androidx.core:core:1.15.0",
        "androidx.core:core-ktx:1.15.0",

        "androidx.savedstate:savedstate-ktx:1.2.0",
        "androidx.savedstate:savedstate:1.2.0",

        "androidx.lifecycle:lifecycle-livedata-core-ktx:2.8.7",
        "androidx.lifecycle:lifecycle-livedata-core:2.8.7",
        "androidx.lifecycle:lifecycle-livedata:2.8.7",
        "androidx.lifecycle:lifecycle-process:2.8.7",
        "androidx.lifecycle:lifecycle-runtime-ktx:2.8.7",
        "androidx.lifecycle:lifecycle-runtime:2.8.7",
        "androidx.lifecycle:lifecycle-service:2.8.7",
        "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7",
        "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.8.7",
        "androidx.lifecycle:lifecycle-viewmodel:2.8.7",
        "androidx.lifecycle:lifecycle-viewmodel-compose:2.8.7",

        "io.insert-koin:koin-core:3.3.3",
        "io.insert-koin:koin-android:3.3.3",
        "io.insert-koin:koin-androidx-compose:3.3.0",
        "io.insert-koin:koin-core-jvm:3.3.3",

        "com.squareup.retrofit2:retrofit:2.11.0",
        "com.squareup.retrofit2:converter-gson:2.11.0",
        "com.squareup.retrofit2:converter-kotlinx-serialization:2.11.0",

        "com.google.code.gson:gson:2.10.1",
        "com.squareup.okhttp3:okhttp:4.12.0",
        "androidx.media3:media3-exoplayer:1.3.1",
        "androidx.media3:media3-ui:1.3.1",
        "io.coil-kt:coil-compose:2.2.2",

        "androidx.room:room-runtime:2.6.1",
        "androidx.room:room-ktx:2.6.1",
        "androidx.room:room-compiler:2.6.1",

        "junit:junit:4.13.2",
        "io.mockk:mockk-jvm:1.13.14",
        "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3",
        "app.cash.turbine:turbine-jvm:1.2.0"
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
        "https://repo.maven.apache.org/maven2",
    ],
    version_conflict_policy = "pinned",
    lock_file = "//:maven_install.json",
)
use_repo(maven, "maven")
