load("@rules_android//android:rules.bzl", "android_binary")
load("@rules_jvm_external//:defs.bzl", "artifact")
load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "lib",
    srcs = glob(["src/main/java/**/*.kt"]),
    custom_package = "com.amary.my.music",
    manifest = "src/main/AndroidManifest.xml",
    plugins = [
        "//:jetpack_compose_compiler_plugin",
        "//:serialization_plugin",
    ],
    visibility = ["//visibility:public"],
    resource_files = glob(["src/main/res/**/*"]),
    deps = [
        artifact("io.insert-koin:koin-core"),
        artifact("io.insert-koin:koin-core-jvm"),
        artifact("io.insert-koin:koin-android"),
        artifact("io.insert-koin:koin-androidx-compose"),
        artifact("com.squareup.retrofit2:retrofit"),
        artifact("com.squareup.retrofit2:converter-gson"),
        artifact("com.squareup.retrofit2:converter-kotlinx-serialization"),
        artifact("com.google.code.gson:gson"),
        artifact("androidx.activity:activity-compose"),
        artifact("androidx.appcompat:appcompat"),
        artifact("androidx.compose.foundation:foundation"),
        artifact("androidx.compose.foundation:foundation-layout"),
        artifact("androidx.compose.runtime:runtime"),
        artifact("androidx.compose.animation:animation-core"),
        artifact("androidx.compose.ui:ui"),
        artifact("androidx.compose.ui:ui-tooling"),
        artifact("androidx.compose.ui:ui-tooling-preview"),
        artifact("androidx.compose.material:material"),
        artifact("androidx.compose.material3:material3"),
        artifact("androidx.compose.material:material-icons-core"),
        artifact("androidx.lifecycle:lifecycle-viewmodel-ktx"),
        artifact("androidx.lifecycle:lifecycle-viewmodel-compose"),
        artifact("androidx.media3:media3-exoplayer"),
        artifact("io.coil-kt:coil-compose"),
        artifact("androidx.navigation:navigation-compose"),
        artifact("org.jetbrains.kotlinx:kotlinx-serialization-core"),
        artifact("org.jetbrains.kotlinx:kotlinx-serialization-json"),
    ],
)

android_binary(
    name = "app",
    manifest = "src/main/AndroidManifest.xml",
    manifest_values = {"applicationId": "com.amary.my.music"},
    deps = [":lib"],
)
