load("@build_bazel_rules_android//android:rules.bzl", "android_binary")
load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")
load("@rules_jvm_external//:defs.bzl", "artifact")

kt_android_library(
    name = "lib",
    srcs = glob(["java/**/*.kt"]),
    custom_package = "com.amary.my.music",
    manifest = "LibraryManifest.xml",
    plugins = ["//:jetpack_compose_compiler_plugin"],
    resource_files = glob(["res/**/*"]),
    deps = [
        artifact("io.insert-koin:koin-core"),
        artifact("io.insert-koin:koin-core-jvm"),
        artifact("io.insert-koin:koin-android"),
        artifact("io.insert-koin:koin-androidx-compose"),
        artifact("com.squareup.retrofit2:retrofit"),
        artifact("com.squareup.retrofit2:converter-gson"),
        artifact("com.google.code.gson:gson"),
        artifact("androidx.activity:activity-compose"),
        artifact("androidx.appcompat:appcompat"),
        artifact("androidx.compose.foundation:foundation"),
        artifact("androidx.compose.foundation:foundation-layout"),
        artifact("androidx.compose.runtime:runtime"),
        artifact("androidx.compose.ui:ui"),
        artifact("androidx.compose.ui:ui-tooling"),
        artifact("androidx.compose.ui:ui-tooling-preview"),
        artifact("androidx.media3:media3-exoplayer"),
    ],
)

android_binary(
    name = "app",
    manifest = "AndroidManifest.xml",
    manifest_values = {"applicationId": "com.amary.my.music"},
    deps = [":lib"],
)
